[package]
name = "trade_master_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"]}
serde = { version = "1", features = ["derive"] }
regex = "1.5"
chrono = "0.4"
serde_json = "1"
anyhow = "1.0"
crossbeam-channel = "0.5"
crossbeam = "0.8"
itertools = "0.10"